<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>MainWindow</class>
 <widget class="QMainWindow" name="MainWindow">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>1042</width>
    <height>556</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Qt 3D Studio Viewer example</string>
  </property>
  <property name="styleSheet">
   <string notr="true"/>
  </property>
  <widget class="QWidget" name="centralWidget">
   <layout class="QGridLayout" name="gridLayout">
    <property name="leftMargin">
     <number>0</number>
    </property>
    <property name="topMargin">
     <number>0</number>
    </property>
    <property name="rightMargin">
     <number>0</number>
    </property>
    <property name="bottomMargin">
     <number>0</number>
    </property>
    <item row="0" column="0">
     <widget class="Q3DSWidget" name="widget" native="true"/>
    </item>
   </layout>
  </widget>
  <widget class="QMenuBar" name="menuBar">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>1042</width>
     <height>21</height>
    </rect>
   </property>
   <widget class="QMenu" name="menuFile">
    <property name="title">
     <string>File</string>
    </property>
    <addaction name="actionOpen"/>
    <addaction name="actionReload"/>
    <addaction name="separator"/>
    <addaction name="actionQuit"/>
   </widget>
   <widget class="QMenu" name="menuView">
    <property name="title">
     <string>View</string>
    </property>
    <widget class="QMenu" name="menuScale_Mode">
     <property name="toolTip">
      <string>Set application scale mode (-scalemode [center,fit,fill] command line parameter)</string>
     </property>
     <property name="title">
      <string>Scale Mode</string>
     </property>
     <addaction name="actionCenter"/>
     <addaction name="actionScale_To_Fit"/>
     <addaction name="actionScale_To_Fill"/>
    </widget>
    <addaction name="actionFull_Screen"/>
    <addaction name="actionBorder"/>
    <addaction name="menuScale_Mode"/>
    <addaction name="actionShadeMode"/>
    <addaction name="actionShowOnScreenStats"/>
   </widget>
   <addaction name="menuFile"/>
   <addaction name="menuView"/>
  </widget>
  <action name="actionQuit">
   <property name="text">
    <string>Quit</string>
   </property>
   <property name="shortcut">
    <string>Ctrl+Q</string>
   </property>
  </action>
  <action name="actionFull_Screen">
   <property name="checkable">
    <bool>true</bool>
   </property>
   <property name="text">
    <string>Full Screen</string>
   </property>
   <property name="shortcut">
    <string>F11</string>
   </property>
  </action>
  <action name="actionBorder">
   <property name="checkable">
    <bool>true</bool>
   </property>
   <property name="text">
    <string>Show Matte</string>
   </property>
   <property name="shortcut">
    <string>Ctrl+D</string>
   </property>
  </action>
  <action name="actionShadeMode">
   <property name="text">
    <string>Shade Mode</string>
   </property>
   <property name="toolTip">
    <string>Toggle between shaded only and wireframe on shaded</string>
   </property>
   <property name="shortcut">
    <string>Ctrl+Shift+W</string>
   </property>
  </action>
  <action name="actionShowOnScreenStats">
   <property name="checkable">
    <bool>true</bool>
   </property>
   <property name="text">
    <string>Show Render Statistics</string>
   </property>
   <property name="shortcut">
    <string>F1</string>
   </property>
  </action>
  <action name="actionOpen">
   <property name="text">
    <string>Open...</string>
   </property>
   <property name="shortcut">
    <string>Ctrl+O</string>
   </property>
  </action>
  <action name="actionReload">
   <property name="text">
    <string>Reload</string>
   </property>
  </action>
  <action name="actionCenter">
   <property name="checkable">
    <bool>true</bool>
   </property>
   <property name="text">
    <string>Center</string>
   </property>
   <property name="toolTip">
    <string>Center content and use design dimensions</string>
   </property>
  </action>
  <action name="actionScale_To_Fit">
   <property name="checkable">
    <bool>true</bool>
   </property>
   <property name="text">
    <string>Scale To Fit</string>
   </property>
   <property name="toolTip">
    <string>Fit content to available space but maintain aspect ratio</string>
   </property>
  </action>
  <action name="actionScale_To_Fill">
   <property name="checkable">
    <bool>true</bool>
   </property>
   <property name="text">
    <string>Scale To Fill</string>
   </property>
   <property name="toolTip">
    <string>Use entire screen space for content, changing aspect ratio as necessary</string>
   </property>
  </action>
  <action name="actionToggle_Scale_Mode">
   <property name="text">
    <string>Toggle Scale Mode</string>
   </property>
   <property name="toolTip">
    <string>Toggle between the various scale modes</string>
   </property>
   <property name="shortcut">
    <string>Ctrl+Shift+S</string>
   </property>
  </action>
 </widget>
 <layoutdefault spacing="6" margin="11"/>
 <customwidgets>
  <customwidget>
   <class>Q3DSWidget</class>
   <extends>QWidget</extends>
   <header>q3dswidget.h</header>
   <container>1</container>
  </customwidget>
 </customwidgets>
 <resources/>
 <connections/>
</ui>
